test/files/neg/t8035-no-adapted-args.scala
object Test {
  def f[T](x: T) = 0

  f(1, 2, 3)
  f()
}
